--- a/templates/usuario/erro.html.twig
+++ b/templates/usuario/erro.html.twig
@@ -14,4 +14,5 @@
 
 {% block body %}
     <p class="msgErro">Oops! Falha ao cadastrar o usuário: <strong>{{ fulano }}</strong></p>
+    <a href="{{ url('web_usuario_index') }}">Voltar</a>
 {% endblock %}
